<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtherActivity">

    <EditText
        android:id="@+id/editTextOtherDisplay"
        android:layout_width="180dp"
        android:layout_height="68dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:background="@color/colorOtherField"
        android:ems="10"
        android:enabled="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/OtherText"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextOtherInput"
        android:layout_width="80dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editTextOtherDisplay"
        app:layout_constraintTop_toTopOf="@+id/editTextOtherDisplay" />

    <Button
        android:id="@+id/buttonOtherQPlus"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonPlus"
        app:layout_constraintStart_toEndOf="@+id/editTextOtherInput"
        app:layout_constraintTop_toTopOf="@+id/editTextOtherInput" />

    <EditText
        android:id="@+id/editTextOtherQuanAdd"
        android:layout_width="80dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/buttonOtherQPlus"
        app:layout_constraintTop_toTopOf="@+id/buttonOtherQPlus" />

    <Button
        android:id="@+id/buttonOtherQMinus"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonMinus"
        app:layout_constraintStart_toEndOf="@+id/editTextOtherQuanAdd"
        app:layout_constraintTop_toTopOf="@+id/editTextOtherQuanAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>