<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlavourQuantityActivity">

    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="496dp"
        android:layout_marginLeft="496dp"
        android:layout_marginTop="80dp"
        android:text="@string/OuantityText"
        android:textColor="@color/colorText"
        android:textSize="@dimen/front_size_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOriginal"
        android:layout_width="108dp"
        android:layout_height="41dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:text="@string/OriginalText"
        android:textColor="@color/colorText"
        android:textSize="@dimen/front_size_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPlusOriQ" />

    <TextView
        android:id="@+id/textViewSuperHot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:text="@string/SuperHotText"
        android:textColor="@color/colorText"
        android:textSize="@dimen/front_size_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPlusSHQ" />

    <TextView
        android:id="@+id/textViewShrimp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="16dp"
        android:text="@string/ShrimpText"
        android:textColor="@color/colorText"
        android:textSize="@dimen/front_size_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPlusShrimpQ" />

    <TextView
        android:id="@+id/textViewWhitebait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="20dp"
        android:text="@string/WhitebaitText"
        android:textColor="@color/colorText"
        android:textSize="@dimen/front_size_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPlusWhitebaitQ" />

    <TextView
        android:id="@+id/textViewSpicyGarlic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="40dp"
        android:text="@string/SpicyGarlicText"
        android:textColor="@color/colorText"
        android:textSize="@dimen/front_size_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlusWhitebaitQ" />

    <Button
        android:id="@+id/buttonPlusOriQ"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonPlus"
        app:layout_constraintEnd_toStartOf="@+id/editTextQOri"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewOriginal"
        app:layout_constraintTop_toTopOf="@+id/editTextQOri" />

    <EditText
        android:id="@+id/editTextQOri"
        android:layout_width="79dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textViewQuantity"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuantity" />

    <Button
        android:id="@+id/buttonMinusOriQ"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonMinus"
        app:layout_constraintStart_toEndOf="@+id/editTextQOri"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuantity" />

    <Button
        android:id="@+id/buttonPlusSHQ"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonPlus"
        app:layout_constraintEnd_toStartOf="@+id/editTextQSH"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewSuperHot"
        app:layout_constraintTop_toTopOf="@+id/editTextQSH" />

    <EditText
        android:id="@+id/editTextQSH"
        android:layout_width="79dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextQOri"
        app:layout_constraintTop_toBottomOf="@+id/editTextQOri" />

    <Button
        android:id="@+id/buttonMinusSHQ"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonMinus"
        app:layout_constraintStart_toEndOf="@+id/editTextQSH"
        app:layout_constraintTop_toTopOf="@+id/editTextQSH" />

    <Button
        android:id="@+id/buttonPlusShrimpQ"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonPlus"
        app:layout_constraintEnd_toStartOf="@+id/editTextQShrimp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewShrimp"
        app:layout_constraintTop_toTopOf="@+id/editTextQShrimp" />

    <EditText
        android:id="@+id/editTextQShrimp"
        android:layout_width="79dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextQSH"
        app:layout_constraintTop_toBottomOf="@+id/editTextQSH" />

    <Button
        android:id="@+id/buttonMinusShrimpQ"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonMinus"
        app:layout_constraintStart_toEndOf="@+id/editTextQShrimp"
        app:layout_constraintTop_toTopOf="@+id/editTextQShrimp" />

    <Button
        android:id="@+id/buttonPlusWhitebaitQ"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonPlus"
        app:layout_constraintEnd_toStartOf="@+id/editTextQWhitebait"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewWhitebait"
        app:layout_constraintTop_toTopOf="@+id/editTextQWhitebait" />

    <EditText
        android:id="@+id/editTextQWhitebait"
        android:layout_width="79dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextQShrimp"
        app:layout_constraintTop_toBottomOf="@+id/editTextQShrimp" />

    <Button
        android:id="@+id/buttonMinusWhitebaitQ"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonMinus"
        app:layout_constraintStart_toEndOf="@+id/editTextQWhitebait"
        app:layout_constraintTop_toTopOf="@+id/editTextQWhitebait" />

    <Button
        android:id="@+id/buttonPlusSGQ"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonPlus"
        app:layout_constraintEnd_toStartOf="@+id/editTextQSG"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewSpicyGarlic"
        app:layout_constraintTop_toTopOf="@+id/editTextQSG" />

    <EditText
        android:id="@+id/editTextQSG"
        android:layout_width="79dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextQWhitebait"
        app:layout_constraintTop_toBottomOf="@+id/editTextQWhitebait" />

    <Button
        android:id="@+id/buttonMinusSGQ"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@color/colorBtnPlusMinus"
        android:text="@string/ButtonMinus"
        app:layout_constraintStart_toEndOf="@+id/editTextQSG"
        app:layout_constraintTop_toTopOf="@+id/editTextQSG" />

</androidx.constraintlayout.widget.ConstraintLayout>